# p3-test

./: Cargo.toml
.github/workflows/: test.yaml
air-util/: Cargo.toml
air-util/src/: air_logger.rs  check_constraints.rs  lib.rs  proof.rs  quotient.rs  trace_writer.rs
air-util/src/builders/: mod.rs  sub.rs  sub_range.rs  sub_sequence.rs  subset.rs
air-util/src/debug/: mod.rs
air-util/src/debug/air/: check.rs  mod.rs  track.rs  write.rs
air-util/src/debug/rap/: check.rs  track.rs  write.rs
air-util/src/folders/: debug.rs  mod.rs  prover.rs  symbolic.rs  tracking.rs  verifier.rs
air-util/src/folders/air/: debug.rs  prover.rs  symbolic.rs  tracking.rs  verifier.rs
air-util/src/folders/rap/: debug.rs  mod.rs  prover.rs  symbolic.rs  tracking.rs  verifier.rs
air-util/src/util/: fixed_set.rs  mod.rs  tracked_field.rs
air-util/src/util/tracked_field/: entry.rs  expression.rs  expression_ext.rs  mod.rs  variable.rs
derive/: Cargo.toml
derive/src/: columnar.rs  enum_dispatch.rs  lib.rs
derive/tests/: test_macros.rs
interaction/: Cargo.toml
interaction/src/: air.rs  bus.rs  generation.rs  interaction.rs  lib.rs  util.rs
keccak-machine/: Cargo.toml
keccak-machine/src/: lib.rs  machine.rs  test_util.rs
keccak-machine/src/chips/: mod.rs
keccak-machine/src/chips/keccak_permute/: mod.rs  trace.rs
keccak-machine/src/chips/keccak_sponge/: air.rs  columns.rs  trace.rs
keccak-machine/src/chips/memory/: air.rs  columns.rs  interaction.rs  mod.rs
keccak-machine/src/chips/merkle_tree/: air.rs  columns.rs  interaction.rs  mod.rs
keccak-machine/src/chips/range_checker/: columns.rs  trace.rs
keccak-machine/src/chips/xor/: air.rs  trace.rs
machine/: Cargo.toml
machine/src/: check_constraints.rs  chip.rs  config.rs  debug_builder.rs  error.rs  folder.rs  generation.rs  keccak_machine.rs  keccak_machine_chips.rs  lib.rs  machine.rs  pcs.rs  permutation.rs  program.rs  proof.rs  quotient.rs  test_util.rs  trace.rs  trace_util.rs  util.rs  verify.rs
machine/src/air_builders/: debug.rs  prover.rs  symbolic.rs  verifier.rs
machine/src/chips/: mod.rs
machine/src/chips/keccak_permute/: air.rs  columns.rs  generation.rs  interaction.rs  mod.rs  round_flags.rs  trace.rs
machine/src/chips/keccak_sponge/: generation.rs  interaction.rs  mod.rs
machine/src/chips/memory/: interaction.rs  mod.rs  trace.rs
machine/src/chips/merkle_tree/: generation.rs  interaction.rs  mod.rs  trace.rs
machine/src/chips/range_checker/: interaction.rs  mod.rs  trace.rs
machine/src/chips/xor/: columns.rs  interaction.rs  mod.rs
machine/src/keccak_permute/: air.rs  chip.rs  columns.rs  generation.rs  mod.rs  permutation_air.rs  rap.rs  round_flags.rs
machine/src/keccak_sponge/: air.rs  chip.rs  columns.rs  generation.rs  mod.rs  util.rs
machine/src/memory/: air.rs  chip.rs  columns.rs  mod.rs
machine/src/merkle_tree/: air.rs  chip.rs  columns.rs  generation.rs  mod.rs
machine/src/range/: air.rs  chip.rs  columns.rs  mod.rs
machine/src/rap/: interaction.rs  mod.rs  permutation_air.rs
machine/src/xor/: air.rs  chip.rs  columns.rs  mod.rs
macro/: Cargo.toml
macro/src/: lib.rs
macro/tests/: test_macros.rs
rap/: Cargo.toml
rap/src/: interaction.rs  lib.rs  permutation_air.rs  rap.rs
src/: chip.rs  debug_builder.rs  folder.rs  lib.rs  machine.rs  main.rs  permutation.rs  proof.rs  quotient.rs  verify.rs
src/keccak_permute/: air.rs  chip.rs  columns.rs  generation.rs  mod.rs  round_flags.rs
src/keccak_sponge/: chip.rs  columns.rs  generation.rs  mod.rs  util.rs
src/merkle_tree/: air.rs  chip.rs  columns.rs  generation.rs  mod.rs
stark/: Cargo.toml
stark/src/: air_debug.rs  check_constraints.rs  lib.rs  proof.rs  stark.rs
stark/src/air_builders/: debug.rs  prover.rs  symbolic.rs  verifier.rs
