[workspace]
members = ["air-util", "derive", "interaction", "machine"]
resolver = "2"

[workspace.dependencies]
p3-air = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-util = { git = "https://github.com/Plonky3/Plonky3.git" }

rust_xlsxwriter = { version = "0.64.1" }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
tracing = { version = "0.1.37" }

# [patch."https://github.com/Plonky3/Plonky3.git"]
# p3-air = { path = "../Plonky3/air" }
# p3-challenger = { path = "../Plonky3/challenger" }
# p3-commit = { path = "../Plonky3/commit" }
# p3-field = { path = "../Plonky3/field" }
# p3-matrix = { path = "../Plonky3/matrix" }
# p3-maybe-rayon = { path = "../Plonky3/maybe-rayon" }
# p3-uni-stark = { path = "../Plonky3/uni-stark" }
# p3-util = { path = "../Plonky3/util" }
