[package]
name = "p3-air-util"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-uni-stark = { workspace = true }
p3-util = { workspace = true }
p3-maybe-rayon = { workspace = true }

rust_xlsxwriter = { workspace = true, optional = true }
serde = { workspace = true }
tracing = { workspace = true }

p3-interaction = { path = "../interaction" }

hashbrown = { version = "0.14.5" }
num-bigint = { version = "0.4.5" }

[features]
default = []
trace-writer = ["dep:rust_xlsxwriter"]
