[package]
name = "p3-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = [
    "extra-traits",
    "full",
    "fold",
    "parsing",
] }
quote = { version = "1.0" }
proc-macro2 = "1.0.79"

[dev-dependencies]
p3-interaction = { path = "../interaction" }

[features]
default = []
air-logger = []
