[package]
name = "p3-machine"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-air = { workspace = true }
p3-challenger = { workspace = true }
p3-commit = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true }
p3-uni-stark = { workspace = true }
p3-util = { workspace = true }

serde = { workspace = true }
tracing = { workspace = true }

p3-interaction = { path = "../interaction" }
p3-stark = { path = "../stark", features = ["debug-trace"] }

itertools = "0.12.1"
rand = "0.8.5"
rust_xlsxwriter = { version = "0.64.1", optional = true }

[features]
default = ["debug-trace"]
debug-trace = ["dep:rust_xlsxwriter", "p3-stark/debug-trace"]
