[package]
name = "p3-machine"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-air = { workspace = true }
p3-challenger = { workspace = true }
p3-commit = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true }
p3-uni-stark = { workspace = true }
p3-util = { workspace = true }

serde = { workspace = true }
tracing = { workspace = true }

p3-interaction = { path = "../interaction" }
p3-air-util = { path = "../air-util" }

itertools = "0.12.1"
rand = "0.8.5"

rust_xlsxwriter = { workspace = true, optional = true }
cfg-if = "1.0.0"

[features]
default = ["trace-writer"]
trace-writer = ["dep:rust_xlsxwriter", "p3-air-util/trace-writer"]
