[package]
name = "p3-stark"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-uni-stark = { workspace = true }
p3-util = { workspace = true }
p3-maybe-rayon = { workspace = true }

serde = { workspace = true }
tracing = { workspace = true }

p3-interaction = { path = "../interaction" }

rust_xlsxwriter = { version = "0.64.1", optional = true }

[features]
default = ["debug-trace"]
debug-trace = ["dep:rust_xlsxwriter"]
